--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <a href="https://www.tiktok.com/@user39339653611881" target="_blank">       
     <i class="fab fa-tiktok"></i>
   
-    <a href="https://https://https://wa.me/https://wa.me/233539499037" target="_blank">   
+    <a href="https://wa.me/233539499037" target="_blank">   
     <i class="fab fa-whatsapp"></i>
 
     
